Bug 305783 - dragging a file over a directory does not expand the dir
Summary: dragging a file over a directory does not expand the dir
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: details mode (other bugs)
Version First Reported In: 2.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-08-25 20:43 UTC by Martin Koller
Modified: 2012-09-25 15:07 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Koller 2012-08-25 20:43:06 UTC
When dragging a file over a directory (in the details view tree, with expandable folders checked), the directory tree node does not expand so one can not drop the file into a subdir of this directory node.

Reproducible: Always
Comment 1 Frank Reininghaus 2012-08-28 09:25:42 UTC
Thanks for the bug report, but I cannot reproduce. Have you enabled "Open folders during drag operations" in the "Navigation" section of the settings?
Comment 2 Emmanuel Pescosta 2012-08-28 20:43:26 UTC
Works for me.
Comment 3 Christoph Feck 2012-08-28 22:14:33 UTC
Nice, it even closes the folders when hovering them again :) I didn't know this feature. Works for me, too.
Comment 4 Emmanuel Pescosta 2012-08-29 14:08:25 UTC
I found a small Bug: 
When you drag a item onto a folder-view-item and then move it away instantly before the autoactivation event is triggered (After 750ms), the folder will be opened anyway.

I have already created a Patch (i will create a review when I'm back at home)
Comment 5 Martin Koller 2012-08-30 06:56:13 UTC
(In reply to comment #1)
> Have you enabled "Open folders during drag operations" in the "Navigation" section of the settings?

That was it! Thanks. I simply didn't find this option.

I'll leave the report open due to comment #4
Comment 6 Emmanuel Pescosta 2012-09-12 17:36:45 UTC
Git commit 9ab8bcd6aa3ce5d96ee380d5f22d77c2f0a38881 by Emmanuel Pescosta.
Committed on 12/09/2012 at 19:33.
Pushed by emmanuelp into branch 'master'.

Fixes Bug 305783 - dragging a file over a directory #c4
     does not expand the dir => Bug discovered: When you drag a
     item onto a folder-view-item and then move it away
     instantly before the autoactivation event is triggered
     (After 750ms), the folder will be opened anyway.
REVIEW: 106381

M  +10   -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/9ab8bcd6aa3ce5d96ee380d5f22d77c2f0a38881
Comment 7 Emmanuel Pescosta 2012-09-25 15:07:39 UTC
Git commit 8c4fa6e03b6b6acedf3a03eef5347f38680818fe by Emmanuel Pescosta.
Committed on 12/09/2012 at 19:33.
Pushed by emmanuelp into branch 'KDE/4.9'.

Fixes Bug 305783 - dragging a file over a directory #c4
     does not expand the dir => Bug discovered: When you drag a
     item onto a folder-view-item and then move it away
     instantly before the autoactivation event is triggered
     (After 750ms), the folder will be opened anyway.
REVIEW: 106381
FIXED-IN: 4.9.2
(cherry picked from commit 9ab8bcd6aa3ce5d96ee380d5f22d77c2f0a38881)

M  +10   -1    dolphin/src/kitemviews/kitemlistcontroller.cpp

http://commits.kde.org/kde-baseapps/8c4fa6e03b6b6acedf3a03eef5347f38680818fe