Fixes Bug 305783 - dragging a file over a directory #c4      does not expand the dir => Bug discovered: When you drag a      item onto a folder-view-item and then move it away      instantly before the autoactivation event is triggered      (After 750ms), the folder will be opened anyway.

BUG: 305783
REVIEW: 106381